# tiny-corpus-workbench

./: .gitattributes  .gitignore  AGENTS.md  CURRENT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: controlled-revisions.md  evidence-based-diagnosis.md  extraction-observatory.md  proposal.md  roadmap.md
docs/learning/: README.md  v0.1-extraction-observatory.md
docs/plans/: v0.1-extraction-observatory.md  v0.2-evidence-based-diagnosis.md  v0.3-controlled-revisions.md  website-v0.1-github-pages.md
fixtures/: LICENSE-CC0-1.0.txt  README.md
fixtures/authored/: meeting-minutes.json  policy-memo.json  release-notice.json
fixtures/golden/: fixtures.json  meeting-minutes.docx  meeting-minutes.md  meeting-minutes.txt  policy-memo.docx  policy-memo.md  policy-memo.txt  release-notice.docx  release-notice.md  release-notice.txt
learning/: README.md  v0.1-extraction-observatory.md  v0.2-evidence-based-diagnosis.md  v0.3-controlled-revisions.md
site/: 404.html  index.html  styles.css
src/tiny_corpus_workbench/: __init__.py  __main__.py  artifacts.py  cli.py  comparison.py  diagnosis.py  diagnosis_verification.py  domain.py  runtime.py  source.py  v03.py  verification.py
tests/: __init__.py
tests/compatibility/: __init__.py  test_extractor_compatibility.py
tests/integration/: __init__.py  test_diagnosis_integration.py  test_golden_observations.py
tools/: generate_diagnosis_fixtures.py  generate_fixtures.py  generate_refinement_fixtures.py  validate_site.py  verify_checkout_portability.py  verify_fixtures.py
(+41 files in other folders)
