[project]
name = "tiny-corpus-workbench"
version = "0.1.0"
description = "An inspectable learning lab for document preparation before RAG"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "tiny-corpus-workbench contributors" },
]
dependencies = [
  "docling==2.113.0",
  "jsonschema==4.26.0",
  "markitdown[docx,pdf]==0.1.6",
]

[dependency-groups]
fixtures = [
  "python-docx==1.2.0",
  "reportlab==5.0.0",
]
test = [
  { include-group = "fixtures" },
]

[project.urls]
Repository = "https://github.com/jameswei/tiny-corpus-workbench"
Website = "https://jameswei.github.io/tiny-corpus-workbench/"

[project.scripts]
tcw = "tiny_corpus_workbench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"
